--- a/architecture-examples/emberjs/index.html
+++ b/architecture-examples/emberjs/index.html
@@ -11,8 +11,7 @@
 			<section id="todoapp">
 				<header id="header">
 					<h1>todos</h1>
-					{{view Ember.TextField id="new-todo" placeholder="What needs to be done?"
-								 valueBinding="newTitle" action="createTodo"}}
+					{{input id="new-todo" type="text" value=newTitle action="createTodo" placeholder="What needs to be done?"}}
 				</header>
 				{{#if length}}
 					<section id="main">
@@ -20,28 +19,28 @@
 							{{#each filteredTodos itemController="todo"}}
 								<li {{bindAttr class="isCompleted:completed isEditing:editing"}}>
 									{{#if isEditing}}
-										{{view Todos.EditTodoView todoBinding="this"}}
+										{{edit-todo class="edit" value=title text-cleared="removeTodo" focus-out="doneEditing" insert-newline="doneEditing"}}
 									{{else}}
-										{{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
+										{{input type="checkbox" class="toggle" checked=isCompleted}}
 										<label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
 										<button {{action "removeTodo"}} class="destroy"></button>
 									{{/if}}
 									</li>
 							{{/each}}
 						</ul>
-						{{view Ember.Checkbox id="toggle-all" checkedBinding="allAreDone"}}
+						{{input type="checkbox" id="toggle-all" checked=allAreDone}}
 					</section>
 					<footer id="footer">
 						<span id="todo-count">{{{remainingFormatted}}}</span>
 						<ul id="filters">
 							<li>
-								{{#linkTo todos.index activeClass="selected"}}All{{/linkTo}}
+								{{#linkTo "todos.index" activeClass="selected"}}All{{/linkTo}}
 							</li>
 							<li>
-								{{#linkTo todos.active activeClass="selected"}}Active{{/linkTo}}
+								{{#linkTo "todos.active" activeClass="selected"}}Active{{/linkTo}}
 							</li>
 							<li>
-								{{#linkTo todos.completed activeClass="selected"}}Completed{{/linkTo}}
+								{{#linkTo "todos.completed" activeClass="selected"}}Completed{{/linkTo}}
 							</li>
 						</ul>
 						{{#if hasCompleted}}
